2007-02-27  Darin Adler  <darin@apple.com>

        * fast/css/computed-style-expected.txt: Updated test result for
        Hyatt's addition of -webkit-border-fit.

2007-02-27  Rob Buis  <buis@kde.org>

        Reviewed by Maciej.

        Add test for:
        http://bugs.webkit.org/show_bug.cgi?id=12905
        Not all svg shapes should support markers

        * svg/custom/shapes-supporting-markers-expected.checksum: Added.
        * svg/custom/shapes-supporting-markers-expected.png: Added.
        * svg/custom/shapes-supporting-markers-expected.txt: Added.
        * svg/custom/shapes-supporting-markers.svg: Added.

2007-02-27  Adele Peterson  <adele@apple.com>

        Reviewed by Lars.

        Updated test for http://bugs.webkit.org/show_bug.cgi?id=12902
        <rdar://problem/5012679> REGRESSION: Pressing return key doesn't 
        move caret to next line after applying a font color in GMail

        * fast/frames/iframe-window-focus-expected.txt:
        * fast/frames/iframe-window-focus.html: Updated test to include insertion of newlines.

2007-02-26  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by Oliver.

        - test cases for <rdar://problem/4946881> Recursive loop with <marker> not caught, crashes in WebCore::SVGPaintServer::draw (11244)
        http://bugs.webkit.org/show_bug.cgi?id=11244

        * svg/custom/circular-marker-reference-1-expected.checksum: Added.
        * svg/custom/circular-marker-reference-1-expected.png: Added.
        * svg/custom/circular-marker-reference-1-expected.txt: Added.
        * svg/custom/circular-marker-reference-1.svg: Added.
        * svg/custom/circular-marker-reference-2-expected.checksum: Added.
        * svg/custom/circular-marker-reference-2-expected.png: Added.
        * svg/custom/circular-marker-reference-2-expected.txt: Added.
        * svg/custom/circular-marker-reference-2.svg: Added.
        * svg/custom/circular-marker-reference-3-expected.checksum: Added.