@@ -1,5 +1,12 @@
 2007-02-27  Darin Adler  <darin@apple.com>
 
+        - test for MacRoman encoding name alias
+
+        * fast/encoding/charset-names-expected.txt: Added.
+        * fast/encoding/charset-names.html: Added.
+
+2007-02-27  Darin Adler  <darin@apple.com>
+
         * fast/css/computed-style-expected.txt: Updated test result for
         Hyatt's addition of -webkit-border-fit.
 
